compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__use___typed_pattern_wrong_type.snap
---
source: compiler-core/src_refactored/__core/type_/tests/use_.rs
assertion_line: 465
expression: "\npub fn main() {\n  use Box(x): Box(Bool), Box(y), Box(z) <- apply(Box(1))\n  x + y + z\n}\n\ntype Box(a) {\n  Box(a)\n}\n\nfn apply(arg, fun) {\n  fun(arg, arg, arg)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  use Box(x): Box(Bool), Box(y), Box(z) <- apply(Box(1))
  x + y + z
}

type Box(a) {
  Box(a)
}

fn apply(arg, fun) {
  fun(arg, arg, arg)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:3:7
  │
3 │   use Box(x): Box(Bool), Box(y), Box(z) <- apply(Box(1))
  │       ^^^^^^^^^^^^^^^^^

Expected type:

    Box(Bool)

Found type:

    Box(Int)
